--- a/index.html
+++ b/index.html
@@ -3,7 +3,12 @@
   <title>HomePage</title>
 </head>
 <body>
-ggggggggggggg
+  <header>
+    <h1>Michael Wu</h1>
+    <div class = "nav">
+      <a href='index.html'>Home</a>
+    </div>
+  </header>
 
 </body>
 </html>
